tests/baselines/reference/emitArrowFunctionWhenUsingArguments10.errors.txt
tests/cases/conformance/es6/arrowFunction/emitArrowFunctionWhenUsingArguments10.ts(3,9): error TS2501: Duplicate identifier '_arguments'. Compiler uses variable declaration '_arguments' to capture 'arguments' reference.
tests/cases/conformance/es6/arrowFunction/emitArrowFunctionWhenUsingArguments10.ts(4,25): error TS2496: The 'arguments' object cannot be referenced in an arrow function below ES6. Consider using a standard function expression.


==== tests/cases/conformance/es6/arrowFunction/emitArrowFunctionWhenUsingArguments10.ts (2 errors) ====
    
    function f() {
        var _arguments = 10;
            ~~~~~~~~~~
!!! error TS2501: Duplicate identifier '_arguments'. Compiler uses variable declaration '_arguments' to capture 'arguments' reference.
        var a = () => () => arguments;
                            ~~~~~~~~~
!!! error TS2496: The 'arguments' object cannot be referenced in an arrow function below ES6. Consider using a standard function expression.
    }